// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-14d6eu1-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-pmbbs0-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1cv6hlt-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-1oy616q-MuiTypography-root-DlsPieChart-titleText"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1cv6hlt-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-1ktxr0x-MuiTypography-root-DlsPieChart-titleText"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1cv6hlt-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-lnvz74-MuiTypography-root-DlsPieChart-titleText"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-13ll9kh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1cv6hlt-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-lnvz74-MuiTypography-root-DlsPieChart-titleText"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-hnvdsm-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-14d6eu1-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-7w0t0-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter  css-1d8wpyf-MuiTypography-root-DlsPieChart-titleText"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-pmbbs0-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;
